# docset-builder

./: .gitignore  LICENSE  README.md  TODO.md  my-own-itch-list.txt  pyproject.toml  rationale.md  tasks.py
src/docset_builder/: __init__.py  build_docsets.py  cache.py  compat.py  config.py  core.py  data_structures.py  directories.py  docset_library.py  logging_configuration.py  main.py  overrides.py  post_build_search.py  pypi.py  repositories.py  repository_search.py  utils.py  virtual_environments.py
tech_tests/: explore_docker.py
tests/functional_tests/: data_collection_test.py
tests/functional_tests/data/arrow/: docbuild.json  pypi.json  pypi_raw.json
