[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "docset_builder.__version__"}
readme = {file = ["README.md"]}

[project]
name = "docset_builder"
authors = [
    {name = "Kenneth Nielsen", email = "k.nielsen81@gmail.com"},
]
description = "Build docsets from source"
requires-python = ">=3.10"
dependencies = [
    "appdirs==1.4.4",
    "attrs==22.1.0",
    "frozendict==2.3.6",
    "structlog==23.1.0",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = [
    "invoke==2.0.0",
    "ruff==0.0.261",
    "black==23.3.0",
    "mypy==1.2.0",
    #"pytest==7.2.1",
    #"types-requests==2.28.11.8",
    #"types-appdirs==1.4.3.1",
    #"pytest-cov==4.0.0",
]