[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "docset_builder.__version__"}
readme = {file = ["README.md"]}

[project]
name = "docset_builder"
authors = [
    {name = "Kenneth Nielsen", email = "k.nielsen81@gmail.com"},
]
description = "Build docsets from source"
requires-python = ">=3.10"
dependencies = [
    "appdirs==1.4.4",
    "attrs==22.1.0",
    "click",
    "doc2dash==3.0.0",
    "structlog==23.1.0",
    "urllib3",
    "typing-extensions"
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = [
    "invoke==2.0.0",
    "ruff==0.0.261",
    "black==23.3.0",
    "mypy==1.2.0",
    "pytest==7.3.1",
    #"types-requests==2.28.11.8",
    "types-appdirs==1.4.3.1",
    "types-urllib3",
    #"pytest-cov==4.0.0",
]

[tool.coverage.report]
exclude_lines = [
    "def .*?_demo\\(.*?\\) -> None:",
    "def .*?_demo\\(.*?\\):",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 100
# The documentation for the checks, and the full list of error code categories, is available here:
# https://beta.ruff.rs/docs/rules/
select = [
    # The broad sets
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    # The plugins
    "A",  # builtins
    "C",  # flake8-comprehensions
    "C4",  # comprehensions
    "D",  # pydocstyle
    "I",  # isort
    "ISC",  # implicit string concatenation
    "INP",  # no pep420 (name space packages)
    "S",  #  bandit
    "T10",  # debugger
    "YTT", # 2020
    # "B",  # flake8-bugbear
]
ignore = [
    "D415",  # First line should end with ., ? or !
    "D202",  # No blank lines allowed after function docstring
    "D107",  # No docstring in __init__
]
exclude = ["views"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
strict_optional = false
exclude = ['views']

[tool.black]
line-length=100
